@@ -1,7 +1,7 @@
 from egov.contactdirectory.testing import EGOV_CONTACTDIRECTORY_FUNCTIONAL_TESTING
 from plone.app.testing import setRoles
 from plone.app.testing import TEST_USER_ID
-from unittest2 import TestCase
+from unittest import TestCase
 import transaction
 
 
